--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Fira Sans Condensed", sans-serif, Roboto;
+  background-color: #252930;
 }
 
 a {
